fixed hero section align

--- a/src/components/Hero/assets/css/hero.css
+++ b/src/components/Hero/assets/css/hero.css
@@ -3,29 +3,28 @@
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    display: grid;
-    place-content: center;
 }
 
 .hero .fluid-container {
-    height: 100vh;
+    margin: 0 auto;
+    height: 80vh;
     width: 100%;
-    padding: 3em;
+    max-width: 2000px;
+    max-height: 1500px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* prevents overflow */
+    /* prevents overflow with gap */
     box-sizing: border-box;
-    max-width: 2000px;
-    max-height: 1500px;
     gap: 2em;
 }
 
 .hero .text h1 {
     font-weight: 900;
     font-size: clamp(3em, 5vw, 8em);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .hero .text p {
@@ -52,14 +51,17 @@
 }
 
 .hero .fluid-container .logo img {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     object-fit: contain;
 }
 
 .hero .fluid-container .social-icons {
+    width: 100%;
+    height: 10%;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 2em;
     font-size: 20px;
 }
@@ -80,6 +82,7 @@
 @media (min-width:960px) {
     .hero .fluid-container {
         flex-direction: row-reverse;
+        padding-top: var(--nav-height);
     }
 
     .hero .fluid-container .text {
